--- a/transaction/src/main/resources/templates/view/stckDlng/stckDlngView.html
+++ b/transaction/src/main/resources/templates/view/stckDlng/stckDlngView.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"  >
     <title>주식거래정보</title>	
-	
 	<style>
 	    table {
 	        width: 100%;
@@ -62,7 +61,9 @@
 	
 </head>
 <body>
-	<h4>주식거래정보</h4>
+<h4>
+   <ul class="nav flex-column" th:replace="view/layout/menuBar.html"></ul>
+</h4>
 	
 	<div class="tab-menu">
 	   <button class="tab-button active" onclick="showTab('pension')">연금저축</button>
