--- a/transaction/src/main/resources/templates/view/stckInfo/stckInfoView.html
+++ b/transaction/src/main/resources/templates/view/stckInfo/stckInfoView.html
@@ -3,78 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"  >
-    <title>주식정보</title>	
-	<style>
-	    table {
-	        width: 100%;
-	        border-collapse: collapse;
-	    }
-	    th, td {
-	        border: 1px solid black;
-	        padding: 8px;
-	        text-align: center;
-	    }
-	    th {
-	        background-color: #f2f2f2;
-	    }
-	    .button-container {
-	        margin: 20px 0;
-	    }
-	    button {
-	        padding: 10px 20px;
-	        margin-right: 10px;
-	        background-color: #4CAF50;
-	        color: white;
-	        border: none;
-	        cursor: pointer;
-	    }
-	    button:hover {
-	        background-color: #45a049;
-	    }
-	    #search-box {
-	        padding: 5px;
-	        margin-right: 10px;
-	    }
-	</style>
+    <title>주식정보</title>		
+	<link rel="stylesheet" type="text/css" th:href="@{/CSS/stckInfo/stckInfo.css}">    
+    <script type="text/javascript" th:src="@{/JS/utlt/com.js}"></script>
+    <script type="text/javascript" th:src="@{/JS/stckInfo/stckInfo.js}"></script>
 </head>
 <body>
-	<h4>주식정보</h4>
+	<h4>
+        <ul class="nav flex-column" th:replace="view/layout/menuBar.html"></ul>
+    </h4>
 	
-	<div class="button-container">
-	   <button onclick="register()">등록</button>
-	   <input type="text" id="search-box" placeholder="검색어 입력">
-	   <button onclick="search()">검색</button>
-	   <button onclick="downloadExcel()">엑셀다운로드</button>
+	<p>등록영역</p>
+	<div class="button-container">	    
+         <form id="stckInfoForm" ><!-- th:action="@{/stckInfo/stckInfoInsert.do}" method="post"-->
+    		<input type="text" placeholder="티커"	    id="TURN"   name="TIKER">		
+    		<input type="text" placeholder="주식명"	id="STCNM"   name="STCNM">		
+    		<input type="text" placeholder="주기"    id="	DVDNCYC" name="DVDNCYC">		
+    		<input type="text" placeholder="배당금"	id="DVDN" name="DVDN">            
+            <input type="hidden" value="Y" id="USEYN" name="USEYN"> <!--사용여부-->            
+            <input type="hidden" value="N"id="DELYN" name="DELYN"> <!--삭제여부-->
+    		<input type="button" onclick="register('stckInfoForm')" value="등록">
+        </form>
+	</div>	
+	<p>검색영역</p>
+	<div>    
+        <form   th:action="@{/stckInfo/stckInfoSelect.do}" method="get">        
+            <input type="text" placeholder="티커"     id="TURN"   name="TIKER">       
+            <input type="text" placeholder="주식명"    id="STCNM"   name="STCNM">      
+            <input type="text" placeholder="주기"    id=" DVDNCYC" name="DVDNCYC">        
+            <input type="text" placeholder="배당금"    id="DVDN" name="DVDN">
+    		<button onclick="search()">검색</button>        
+        </form>
 	</div>
-	<p th:text="${stckInfoSelect}"></p>
-	<table>
-	   <thead>
-	       <tr>
-	           <th>티커</th>
-	           <th>주식명</th>
-	           <th>주기</th>
-	           <th>배당금</th>
-	           <th>사용여부</th>
-	           <th>삭제여부</th>
-	           <th>버전</th>
-	           <th>등록일자</th>
-	           <th>수정일자</th>
-	       </tr>
-	   </thead>
-	   <tbody>
-	       <tr>
-	           <td>DKNG</td>
-	           <td>드래프트킹스(DKNG)</td>
-	           <td>0</td>
-	           <td>0</td>
-	           <td>0</td>
-	           <td>0</td>
-	           <td>0</td>
-	           <td></td>
-	           <td></td>
-	       </tr>
-	       <!-- Remaining rows omitted for brevity -->
-	   </tbody>
-	</table>
+	<!--<p th:text="${stckInfoSelect}"></p>-->
+	<button onclick="downloadExcel()">엑셀다운로드</button>
+	<p>조회영역</p>
+    
+    <table     id='stckInfoSelect'>
+      <thead>
+          <tr>                
+              <th id="ROW_"             name="ROW_">순번</th>
+              <th id="TIKER"            name="TIKER">티커</th>
+              <th id="STCNM"            name="STCNM">주식명</th>
+              <th id="DVDNCYC"          name="DVDNCYC">주기</th>
+              <th id="DVDN"             name="DVDN">배당금</th>
+              <th id="USEYN"            name="USEYN">사용여부</th>
+              <th id="DELYN"            name="DELYN">삭제여부</th>                        
+              <th style="display: none;" id="TURN"            name="TURN">삭제여부</th>              
+              <th id="btn"              name="btn">버튼</th>
+              <th id="REGYMD"           name="REGYMD">등록일자</th>
+              <th id="REGYMD"           name="REGYMD">수정일자</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr th:each="sSelect : ${stckInfoSelect}">                
+              <td th:text="${sSelect.ROW_}"></td>
+              <td ><input type="text" th:value="${sSelect.TIKER}"></td>
+              <td ><input type="text" th:value="${sSelect.STCNM}"></td>
+              <td ><input type="text" th:value="${sSelect.DVDNCYC}"></td>
+              <td ><input type="text" th:value="${sSelect.DVDN}"></td>
+              <td ><input type="checkbox" th:value="${sSelect.USEYN}"></td>
+              <td ><input type="checkbox" th:value="${sSelect.DELYN}"></td>                              
+              <td style="display: none;"><input type="hidden" th:value="${sSelect.TURN}"></td><!--순번-->               
+              <td  ><input type="button" value="수정" onclick="rowUpdateClicked('#stckInfoSelect', this)"></td>
+              <td th:text="${sSelect.REGYMD}">               등록일자</td>               
+              <td th:text="${sSelect.REGYMD}">               수정일자</td>
+          </tr>
+          <!-- Remaining rows omitted for brevity -->
+      </tbody>
+    </table>
 </body>
 </html>
