--- a/transaction/src/main/resources/static/CSS/stckInfo/stckInfo.css
+++ b/transaction/src/main/resources/static/CSS/stckInfo/stckInfo.css
@@ -1,5 +1,5 @@
 table {
-    width: 100%;
+    width: 98%;
     border-collapse: collapse;
 }
 th, td {
@@ -13,18 +13,53 @@ th {
 .button-container {
     margin: 20px 0;
 }
-button {
-    padding: 10px 20px;
-    margin-right: 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    cursor: pointer;
-}
-button:hover {
-    background-color: #45a049;
-}
+
 #search-box {
     padding: 5px;
     margin-right: 10px;
+}
+
+
+
+
+.search-container {
+    background-color: white; /* 검색창 배경색 */
+    padding: 20px; /* 내부 여백 */
+    border-radius: 10px; /* 둥근 모서리 */
+}
+
+.form01 {
+    display: flex; /* Flexbox 사용 */
+    gap: 10px; /* 요소 간격 */
+    flex-wrap: wrap; /* 화면 크기에 따라 자동 줄 바꿈 */
+}
+
+.search-input {
+    padding: 10px; /* 내부 여백 */
+    border: 1px solid #007BFF; /* 테두리 색 */
+    border-radius: 5px; /* 둥근 모서리 */
+    font-size: 16px; /* 글자 크기 */
+    outline: none; /* 테두리 제거 */
+    transition: border-color 0.3s; /* 테두리 색 변화 효과 */
+    /*flex: 1;*/ /* 가로 크기 자동 조정 */
+    min-width: 50px; /* 최소 너비 설정 */
+}
+
+.search-input:focus {
+    border-color: #0056b3; /* 포커스 시 테두리 색 */
+}
+
+.search-button {
+    background-color: #007BFF; /* 버튼 배경색 */
+    color: white; /* 글자 색 */
+    border: none; /* 테두리 제거 */
+    padding: 10px 20px; /* 내부 여백 */
+    cursor: pointer; /* 포인터 효과 */
+    border-radius: 5px; /* 둥근 모서리 */
+    font-size: 16px; /* 글자 크기 */
+    transition: background-color 0.3s; /* 배경색 변화 효과 */
+}
+
+.search-button:hover {
+    background-color: #0056b3; /* 호버 시 배경색 변화 */
 }
