--- a/transaction/src/main/resources/templates/view/stckInfo/stckInfoView.html
+++ b/transaction/src/main/resources/templates/view/stckInfo/stckInfoView.html
@@ -52,11 +52,11 @@
 	</div>	
 	<p>검색영역</p>	
 	<div	class="search-container">    
-        <form class="form01"  th:action="@{/stckInfo/stckInfoSelect.do}" method="get">        
-            <input class="search-input" type="text" placeholder="티커"	id="TURN"   	name="TIKER" th:value="${parameter?.TIKER}">
-            <input class="search-input" type="text" placeholder="주식명"	id="STCNM"		name="STCNM" th:value="${parameter?.STCNM}">      
-            <input class="search-input" type="text" placeholder="주기"	id="DVDNCYC"	name="DVDNCYC" th:value="${parameter?.DVDNCYC}">	     
-            <input class="search-input" type="text" placeholder="배당금"	id="DVDN" 		name="DVDN"	th:value="${parameter?.DVDN}">
+        <form class="form01"  th:action="@{/stckInfo/stckInfoViewPageSelect.do}" method="get">        
+            <input class="search-input" type="text" placeholder="티커"	id="TURN"   	name="TIKER" 	th:value="${parameter?.TIKER}">
+            <input class="search-input" type="text" placeholder="주식명"	id="STCNM"		name="STCNM" 	th:value="${parameter?.STCNM}">      
+            <input class="search-input" type="text" placeholder="주기"	id="DVDNCYC"	name="DVDNCYC" 	th:value="${parameter?.DVDNCYC}">	     
+            <input class="search-input" type="text" placeholder="배당금"	id="DVDN" 		name="DVDN"		th:value="${parameter?.DVDN}">
     		<button	onclick="search()">검색</button>        
         </form>
 	</div>
@@ -97,5 +97,41 @@
           <!-- Remaining rows omitted for brevity -->
       </tbody>
     </table>
+<!--	<p th:text="${parameter}"></p>
+	<p th:text="${pageVo}"></p>-->
+	<!-- 페이징 처리 -->
+		<nav aria-label="Page navigation example" >
+		    <ul class="pagination justify-content-center">
+		     <!--맨 처음 페이지로 이동하는 버튼 -->
+		    <li class="page-item">
+		        <span th:if="${pageVo.startPage > 1}">
+		        <a class="page-link" th:href="@{'/stckInfo/stckInfoViewPageSelect.do?page=1'+ '&TIKER=' +${parameter?.TIKER} + '&STCNM=' + ${parameter?.STCNM} + '&DVDNCYC=' + ${parameter?.DVDNCYC}+ '&DVDN=' + ${parameter?.DVDN}}" th:text="'처음'"></a>
+		        </span>
+		    </li>
+		     <!--이전 블록으로 이동하는 버튼 -->
+		    <li class="page-item">
+		        <span th:if="${pageVo.isPrev == true}">
+		        <a class="page-link" th:href="@{'/stckInfo/stckInfoViewPageSelect.do?page=' + ${pageVo.startPage - 1} + '&TIKER=' +${parameter?.TIKER} + '&STCNM=' + ${parameter?.STCNM} + '&DVDNCYC=' + ${parameter?.DVDNCYC}+ '&DVDN=' + ${parameter?.DVDN}}" th:text="'이전'"></a>
+		        </span>
+		    </li>
+		     <!--시퀀스 보여주는 값을 변경. -->
+		    <li class="page-item" th:each="pageNum : ${#numbers.sequence(pageVo.startPage, pageVo.endPage)}">
+		        <a class="page-link" th:href="@{'/stckInfo/stckInfoViewPageSelect.do?page=' + ${pageNum}+ '&TIKER=' +${parameter?.TIKER} + '&STCNM=' + ${parameter?.STCNM} + '&DVDNCYC=' + ${parameter?.DVDNCYC}+ '&DVDN=' + ${parameter?.DVDN}}" th:text="|&emsp;${pageNum}&emsp;|"></a>
+		    </li>
+		    <li class="page-item">
+		     <!--다음 블록으로 이동하는 버튼 -->
+		    <span th:if="${pageVo.isNext == true}">
+		        <a class="page-link" th:href="@{'/stckInfo/stckInfoViewPageSelect.do?page=' + ${pageVo.endPage + 1}+ '&TIKER=' +${parameter?.TIKER} + '&STCNM=' + ${parameter?.STCNM} + '&DVDNCYC=' + ${parameter?.DVDNCYC}+ '&DVDN=' + ${parameter?.DVDN}}" th:text="'다음'"></a>
+		    </span>
+		    </li>
+		     <!--맨 뒷 페이지로 이동하는 버튼 -->
+		    <li class="page-item">
+		        <span th:if="${pageVo.endPage < pageVo.totalPageCount}">
+		        <a class="page-link" th:href="@{'/stckInfo/stckInfoViewPageSelect.do?page=' + ${pageVo.totalPageCount}+ '&TIKER=' +${parameter?.TIKER} + '&STCNM=' + ${parameter?.STCNM} + '&DVDNCYC=' + ${parameter?.DVDNCYC}+ '&DVDN=' + ${parameter?.DVDN}}" th:text="|&emsp;끝|"></a>
+		        </span>
+		    </li>
+		    </ul>
+		</nav>	
+	<!-- 페이징 처리 -->
 </body>
 </html>
